# mcp-server-daily

./: .env  .env.example  README.md  expense_tracker.py  news.py  pyproject.toml  utility_dispatcher.py
docs/: user_functions.md
mcp-bearer-token/: expenses.db  legal_assistant.py  legal_kb.json  mcp_starter.py
mcp-calculator/: mcp_calculator.py
mcp-google-oauth/: README.md
mcp-google-oauth/src/: google-handler.ts  index.ts
mcp-news/: mcp_news.py  news_service.py
mcp-spotify/: mcp_spotify.py
tests/: test_calendar.py  test_currency.py  test_expense_tracker.py  test_mcp_calculator.py  test_mcp_tools.py  test_news.py  test_news_api.py
